--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -20,7 +20,7 @@
     width: 50%;
     padding: 24px;
     font-weight: 700;
-    background: #914CEA;
+    background: #735BF2;
     color: #FFFFFF;
     border-radius: 5px;
     margin: 12px 0 84px;
